--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,9 @@
             <h2>Total Keyword Visualization</h2>
             <p>Explore the current Youtube trends based on video comments' keyword analysis.</p>
             <!-- Include your visualization tool here -->
-            <div id="wordcloud-placeholder" class="wordcloud"></div>
+            <div id="wordcloud-placeholder" class="wordcloud">
+                <img src="static/img/word_ex.png" alt="wordcloud" style="height : 500px;">
+            </div>
         </section>
         
         <section id="introduction">
