--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -106,13 +106,6 @@ section ul li {
     font-size: 14px;
 }
 
-.wordcloud {
-    width: 100%;
-    height: 400px;
-    background-color: #eee;
-    /* Add any additional styling for the word cloud visualization */
-}
-
 .pricing-image-container {
     display: flex;
     justify-content: center;
@@ -961,12 +954,12 @@ input[type="submit"]:active {
     font-size: 14px;
 }
 
-#keyword-search form {
-    margin-bottom: 20px;
-}
-
 #keyword-search .form-group {
-    margin-bottom: 10px;
+    display : flex;
+    flex-direction: column;
+    align-items : center;
+    margin-bottom: 40px;
+
 }
 
 #keyword-search label {
@@ -978,7 +971,10 @@ input[type="submit"]:active {
 #keyword-search input[type="text"] {
     padding: 10px;
     width: 326px;
+    border: 2px;
+    border-radius: 4px;
     font-size: 16px;
+    display : block;
 }
 
 #keyword-search button {
@@ -1012,6 +1008,7 @@ input[type="submit"]:active {
 .wordcloud {
     width: 100%;
     height: 500px;
-    background: #eee;
+    /* background: #eee; */
+    text-align : center;
 }
 
