--- a/templates/proposal.html
+++ b/templates/proposal.html
@@ -192,34 +192,34 @@
                 var exampleKeywords = [];
                     switch (productType) {
                         case "technology":
-                            exampleKeywords = "스마트폰, 컴퓨터, 인터넷, IT, 디지털";
+                            exampleKeywords = "스마트폰, 컴퓨터, 아이폰, 갤럭시, 워치";
                             break;
                         case "gaming":
-                            exampleKeywords = "게임, 오버워치, 리그오브레전드, 마인크래프트, 롤";
+                            exampleKeywords = "시뮬레이션, RPG, 콘솔게임, 모바일게임, 컴퓨터게임";
                             break;
                         case "beauty-fashion":
-                            exampleKeywords = "화장품, 패션, 뷰티, 메이크업, 스타일";
+                            exampleKeywords = "립스틱, 선스틱, 향수, 옷, 신발";
                             break;
                         case "food-beverage":
-                            exampleKeywords = "음식, 요리, 음료, 레시피, 식품";
+                            exampleKeywords = "치킨, 맥주, 식당, 탄산음료, 피자";
                             break;
                         case "health-fitness":
-                            exampleKeywords = "건강, 운동, 다이어트, 피트니스, 웰빙";
+                            exampleKeywords = "건강음료, 약, 다이어트, 운동기록, 피트니스앱";
                             break;
                         case "travel-tourism":
-                            exampleKeywords = "여행, 관광, 해외여행, 국내여행, 여행팁";
+                            exampleKeywords = "관광, 여행지, 투어, 숙소, 항공권";
                             break;
                         case "automotive":
-                            exampleKeywords = "자동차, 차량, 자동차리뷰, 자동차정비, 자동차운전";
+                            exampleKeywords = "자동차, 자동차정비, 중고차, 네비게이션, 블랙박스";
                             break;
                         case "entertainment-media":
-                            exampleKeywords = "엔터테인먼트, 영화, 드라마, 연예인, 미디어";
+                            exampleKeywords = "영화, 드라마, VPN, OTT, 음원서비스";
                             break;
                         case "home-lifestyle":
-                            exampleKeywords = "가정, 인테리어, 라이프스타일, 가구, 홈케어";
+                            exampleKeywords = "인테리어, 가구, 홈케어, 청소기, 에어컨";
                             break;
                         case "financial-services":
-                            exampleKeywords = "금융, 재테크, 보험, 은행, 금융상품";
+                            exampleKeywords = "재테크, 보험, 은행, 주식앱, 모바일금융";
                             break;
                         default:
                             break;
